# telefax

./: .gitignore  AUTHORS  README.md  meson.build
data/: com.github.stsdc.telefax.desktop  com.github.stsdc.telefax.gschema.xml  meson.build
src/: MainWindow.vala  Telefax.vala  UpdatesHandler.vala
src/Common/: SavedState.vala  Settings.vala
src/Telegram/: Authorisation.vala  Client.vala  TDAPI.vala  TDLibParameters.vala
src/Widgets/: EnterConfirmationCode.vala  EnterPhoneNumber.vala  Welcome.vala
vapi/: libtdjson.vapi  tdjson.vapi
